--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,19 +17,22 @@ jobs:
       packages: write
     steps:
       - uses: actions/checkout@v3
-      - name: Log in to the Container registry
-        uses: docker/login-action@v2
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and push Docker image
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-        env:
-          COMMIT_HASH: ${{ github.sha }}
+      - name: Build and push
+        uses: docker/build-push-action@v5
         with:
           context: ./screenshoter
-          file: ./Dockerfile-production
+          file: Dockerfile-production
           push: true
           tags: |
             ghcr.io/rukomoynikov/screenshoter:latest
