--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,8 +31,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: ./screenshoter
-          file: Dockerfile-production
+          context: screenshoter
+          file: screenshoter/Dockerfile-production
           push: true
           tags: |
             ghcr.io/rukomoynikov/screenshoter:latest
