--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,4 +38,41 @@ jobs:
             ghcr.io/rukomoynikov/screenshoter:latest
             ghcr.io/rukomoynikov/screenshoter:${{ github.sha }}
             
-            
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v3
+      - name: Create and populate ansible inventory file
+        env:
+          GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
+          IP_ADDRESS: ${{ secrets.IP_ADDRESS }}
+        run: |
+          cat <<EOF > deploy/hosts.json
+          {
+            "all": {
+              "hosts": {
+                "production": {
+                  "ansible_host": "$IP_ADDRESS",
+                  "ansible_user": "root"
+                }
+              },
+              "vars": {
+                "application_name": "browserlessio",
+                "GITHUB_TOKEN": "$GHCR_TOKEN",
+              }
+            }
+          }
+          EOF
+          
+          cat deploy/hosts.json
+      - name: Run playbook
+        uses: dawidd6/action-ansible-playbook@v2
+        with:
+          playbook: deploy_app.yml
+          directory: ./deploy
+          key: ${{secrets.SSH_PRIVATE_KEY}}
+          options: |
+            --inventory hosts.json
+            --verbose            
+
