Deploy service to portainer

--- a/deploy/stack.yml
+++ b/deploy/stack.yml
@@ -11,3 +11,23 @@ services:
     image: "ghcr.io/rukomoynikov/screenshoter"
     ports:
       - "8080:8080"
+    networks:
+      - traefik-public
+    deploy:
+      labels:
+        - traefik.enable=true
+        - traefik.http.routers.application.rule=Host(`screenshoter.codemetrics.dev`)
+        - traefik.http.routers.application.tls=true
+        - traefik.http.routers.application.tls.certresolver=leresolver
+        - traefik.http.routers.application.middlewares=redirect-to-https
+        - traefik.http.routers.application-https.rule=Host(`screenshoter.codemetrics.dev`)
+        - traefik.http.routers.application-https.entrypoints=websecure
+        - traefik.http.routers.application-https.tls=true
+        - traefik.http.routers.application-https.tls.certresolver=le
+        - traefik.http.routers.application-https.middlewares=redirect-to-https
+        - traefik.http.routers.application-https.service=application
+        - traefik.http.services.application.loadbalancer.server.port=8080
+
+networks:
+  traefik-public:
+    external: true
